--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-google-maps/api": "^2.19.3",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.441.0",
     "mdb-react-ui-kit": "^9.0.0",
     "react": "^18.3.1",
